<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRecipeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/recipe_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="10sp"
                android:text="@string/textview"
                android:textAlignment="center"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/image_recipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="10sp"
                android:contentDescription="@string/recipe_image"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

            <View
                android:id="@+id/divider16"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="15sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/origin_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/origen"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/recipe_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/textview"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="15sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/category_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/category"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/recipe_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/textview"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider20"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="15sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/ingredients_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/ingredient"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/recipe_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/textview"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider19"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="15sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/tutorial_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/tutorial"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/recipe_tutorial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/textview"
                android:textAlignment="inherit"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider18"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="15sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/video_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/video_suport"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/recipe_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:autoLink="web"
                android:text="@string/textview"
                android:textColor="#2196F3"
                android:textSize="20sp" />

            <View
                android:id="@+id/divider17"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="15sp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/about_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:text="@string/about"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/recipe_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="15sp"
                android:autoLink="web"
                android:text="@string/textview"
                android:textColor="#2196F3"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>